# fastapi-caching-route

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/api_reference/: caching_route.md  fastapi_cache.md  typing.md
examples/: complex.py  invalidate.py  ruff.toml  simple.py
fastapi_caching_route/: __init__.py  main.py
tests/: ruff.toml  test_main.py
