[tool.poetry]
name = "fastapi-caching-route"
version = "0.2.0"
description = "FastAPI route for efficient caching."
authors = ["Petr Tsymbarovich <petr@tsymbarovich.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
aiocache = ">=0.12,<1.0"

[tool.poetry.group.dev.dependencies]
fastapi-slim = ">=0.111,<1.0"
httpx = "^0.27"
mypy = "^1.7"
pytest = "^8.2"
ruff = "^0.4"
uvicorn = {extras = ["standard"], version = "^0.30"}

[tool.poetry.group.docs.dependencies]
griffe-typingdoc = "^0.2"
markdown-include = "^0.8"
mkdocs = "^1.5"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.25"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "ANN401", "D107", "D105", "PLR0913"]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
known-local-folder = ["examples"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[[tool.mypy.overrides]]
module = ["aiocache.*"]
ignore_missing_imports = true
